--- a/chart_gen.html
+++ b/chart_gen.html
@@ -1,1 +1,10 @@
 <!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UFT-8">
+		<title>Chart Generator</title>
+	</head>
+	<body>
+	
+	</body>
+</html>
