--- a/dash_board.html
+++ b/dash_board.html
@@ -2,9 +2,12 @@
 <html>
 	<head>
 		<meta charset="UFT-8">
-		<title>Chart Generator</title>
+		<title>Chart creation</title>
+		
 	</head>
 	<body>
+		<h3>Dash Board</h3>
+		
 	
 	</body>
 </html>
